crates/llvmkit-ir/tests/compile_fail/typed_context_undeclared_analysis.stderr
error[E0277]: analysis `DominatorTreeAnalysis` is not in this pass's `Requires` list `()`
  --> tests/compile_fail/typed_context_undeclared_analysis.rs:35:22
   |
35 |         let _dt = cx.analysis::<DominatorTreeAnalysis, _>();
   |                      ^^^^^^^^ the trait `AnalysisSelector<'_, B, DominatorTreeAnalysis, _>` is not implemented for `()`
   |
   = note: add the analysis marker to `type Requires` on the pass, or use the erased pass path for ad-hoc queries
   = help: the following other types implement trait `AnalysisSelector<'ctx, B, A, I>`:
             `(A0, A1)` implements `AnalysisSelector<'_, B, A0, Idx0>`
             `(A0, A1)` implements `AnalysisSelector<'_, B, A1, Idx1>`
             `(A0, A1, A2)` implements `AnalysisSelector<'_, B, A0, Idx0>`
             `(A0, A1, A2)` implements `AnalysisSelector<'_, B, A1, Idx1>`
             `(A0, A1, A2)` implements `AnalysisSelector<'_, B, A2, Idx2>`
             `(A0, A1, A2, A3)` implements `AnalysisSelector<'_, B, A0, Idx0>`
             `(A0, A1, A2, A3)` implements `AnalysisSelector<'_, B, A1, Idx1>`
             `(A0, A1, A2, A3)` implements `AnalysisSelector<'_, B, A2, Idx2>`
           and $N others
note: required by a bound in `TypedFunctionPassContext::<'pm, 'r, 'ctx, B, R, E>::analysis`
  --> src/pass_context.rs
   |
   |     pub fn analysis<A, I>(&self) -> &'r A::Result
   |            -------- required by a bound in this associated function
...
   |         R: AnalysisSelector<'ctx, B, A, I>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TypedFunctionPassContext::<'pm, 'r, 'ctx, B, R, E>::analysis`
